syntax = "proto3";

package books.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/ordarr/books/v1";

message ValueRequest {
  string value = 1;
}

message Book {
  string id = 1;
  string title = 2;
  repeated string authors = 3;
}

message BookResponse {
  Book content = 1;
}

message BooksResponse {
  repeated Book content = 1;
}

service Books {
  rpc GetBooks(google.protobuf.Empty) returns (BooksResponse) {}
  rpc GetBookById(ValueRequest) returns (BookResponse) {}
  rpc GetBookByTitle(ValueRequest) returns (BookResponse) {}
}
